undo because sonar complaints about duplications