@@ -20,6 +20,8 @@ import java.util.Optional;
 import java.util.function.Function;
 import java.util.function.IntPredicate;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
+
 import org.apache.commons.collections4.CollectionUtils;
 import uk.gov.hmcts.reform.sscs.ccd.domain.SscsCaseData;
 import uk.gov.hmcts.reform.sscs.ccd.domain.YesNo;
@@ -251,7 +253,6 @@ public enum EsaAllowedOrRefusedCondition implements PointsCondition<EsaAllowedOr
             caseData -> caseData.getSscsEsaCaseData().getSchedule3Selections());
     }
 
-    // BEGIN-NOSCAN
     @Override
     public boolean isApplicable(DecisionNoticeQuestionService questionService, SscsCaseData caseData) {
         if ("Yes".equalsIgnoreCase(caseData.getSscsFinalDecisionCaseData().getWriteFinalDecisionGenerateNotice())) {
@@ -269,7 +270,6 @@ public enum EsaAllowedOrRefusedCondition implements PointsCondition<EsaAllowedOr
             return false;
         }
     }
-    // END-NOSCAN
 
     @Override
     public IntPredicate getPointsRequirementCondition() {
@@ -307,14 +307,14 @@ public enum EsaAllowedOrRefusedCondition implements PointsCondition<EsaAllowedOr
                 .map(c -> c.getOptionalIsSatisfiedMessage(sscsCaseData))
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .toList();
+                .collect(Collectors.toList());
 
         final List<String> validationErrorMessages =
                 validationConditions.stream()
                 .map(e -> e.getOptionalErrorMessage(sscsCaseData))
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .toList();
+                .collect(Collectors.toList());
 
         List<String> criteriaSatisfiedMessages = new ArrayList<>();
         if (primaryPointsCondition.isPresent()) {
