@@ -20,6 +20,8 @@ import java.util.Optional;
 import java.util.function.Function;
 import java.util.function.IntPredicate;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
+
 import org.apache.commons.collections4.CollectionUtils;
 import uk.gov.hmcts.reform.sscs.ccd.domain.SscsCaseData;
 import uk.gov.hmcts.reform.sscs.ccd.domain.YesNo;
@@ -253,7 +255,6 @@ public enum UcAllowedOrRefusedCondition implements PointsCondition<UcAllowedOrRe
             caseData -> caseData.getSscsUcCaseData().getSchedule7Selections());
     }
 
-    // BEGIN-NOSCAN
     @Override
     public boolean isApplicable(DecisionNoticeQuestionService questionService, SscsCaseData caseData) {
         if ("Yes".equalsIgnoreCase(caseData.getSscsFinalDecisionCaseData().getWriteFinalDecisionGenerateNotice())) {
@@ -271,7 +272,6 @@ public enum UcAllowedOrRefusedCondition implements PointsCondition<UcAllowedOrRe
             return false;
         }
     }
-    // END-NOSCAN
 
     @Override
     public IntPredicate getPointsRequirementCondition() {
@@ -309,14 +309,14 @@ public enum UcAllowedOrRefusedCondition implements PointsCondition<UcAllowedOrRe
                 .map(c -> c.getOptionalIsSatisfiedMessage(sscsCaseData))
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .toList();
+                .collect(Collectors.toList());
 
         final List<String> validationErrorMessages =
                 validationConditions.stream()
                 .map(e -> e.getOptionalErrorMessage(sscsCaseData))
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .toList();
+                .collect(Collectors.toList());
 
         List<String> criteriaSatisfiedMessages = new ArrayList<>();
         if (primaryPointsCondition.isPresent()) {
