@@ -15,6 +15,8 @@ import java.util.Optional;
 import java.util.function.Function;
 import java.util.function.IntPredicate;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
+
 import org.apache.commons.collections4.CollectionUtils;
 import uk.gov.hmcts.reform.sscs.ccd.domain.SscsCaseData;
 import uk.gov.hmcts.reform.sscs.ccd.domain.YesNo;
@@ -191,7 +193,6 @@ public enum UcPointsRegulationsAndSchedule7ActivitiesCondition implements Points
         }
     }
 
-    // BEGIN-NOSCAN
     @Override
     public Optional<String> getOptionalErrorMessage(DecisionNoticeQuestionService questionService, SscsCaseData sscsCaseData) {
 
@@ -200,14 +201,14 @@ public enum UcPointsRegulationsAndSchedule7ActivitiesCondition implements Points
                 .map(c -> c.getOptionalIsSatisfiedMessage(sscsCaseData))
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .toList();
+                .collect(Collectors.toList());
 
         List<String> validationErrorMessages =
                 validationConditions.stream()
                 .map(e -> e.getOptionalErrorMessage(sscsCaseData))
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .toList();
+                .collect(Collectors.toList());
 
         List<String> criteriaSatisfiedMessages = new ArrayList<>();
         if (displayPointsSatisfiedMessageOnError) {
@@ -222,7 +223,6 @@ public enum UcPointsRegulationsAndSchedule7ActivitiesCondition implements Points
         }
         return Optional.empty();
     }
-    // END-NOSCAN
 
     public static Function<SscsCaseData, List<String>> getAllAnswersExtractor() {
         return sscsCaseData -> CollectionUtils.collate(emptyIfNull(sscsCaseData.getSscsUcCaseData().getUcWriteFinalDecisionPhysicalDisabilitiesQuestion()),
